--- a/cart.html
+++ b/cart.html
@@ -6,28 +6,181 @@
   <title>Cart - DjsDopeDesigns</title>
   <link rel="stylesheet" href="styles.css">
   <style>
-    body { font-family: Arial, sans-serif; margin:0; background:#f6f6f6; color:#333; }
-    .container { max-width:1200px; margin:40px auto; padding:20px; background:#fff; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.08); }
-    h1 { margin-bottom:20px; }
-    table { width:100%; border-collapse:collapse; margin-bottom:20px; }
-    th, td { padding:12px; text-align:center; border-bottom:1px solid #ddd; }
-    img { width:80px; height:80px; object-fit:cover; border-radius:6px; }
-    .quantity-btn { padding:6px 12px; margin:0 4px; cursor:pointer; border:none; border-radius:4px; background:#f1641e; color:#fff; }
-    .remove-btn { cursor:pointer; color:#f1641e; font-weight:bold; }
-    .total { text-align:right; font-size:18px; margin-top:10px; font-weight:bold; }
-    select, .checkout-btn { padding:10px 14px; font-size:16px; border-radius:6px; margin-top:5px; }
-    .checkout-btn { cursor:pointer; background:#f1641e; color:#fff; border:none; transition:0.3s; }
-    .checkout-btn:hover { background:#d9550e; }
-    a.logo { font-weight:bold; font-size:1.8rem; color:#ff6600; text-decoration:none; }
-    .header { background:#f7f7f7; padding:1rem 0; box-shadow:0 2px 5px rgba(0,0,0,0.05); }
-    .header-container { display:flex; align-items:center; justify-content:space-between; max-width:1200px; margin:0 auto; padding:0 1rem; }
+    body { 
+      font-family: Arial, sans-serif; 
+      margin: 0; 
+      background: #f6f6f6; 
+      color: #333; 
+      overflow-x: hidden; /* Prevent horizontal scroll */
+    }
+
+    /* 🌐 Header */
+    .header { 
+      position: sticky; 
+      top: 0; 
+      z-index: 1000; 
+      background: #fff; 
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1); 
+    }
+
+    .header-container { 
+      display: flex; 
+      align-items: center; 
+      justify-content: space-between; 
+      padding: 8px 16px; 
+      max-width: 1200px; 
+      margin: 0 auto; 
+      gap: 10px; 
+    }
+
+    .logo { 
+      font-size: 20px; 
+      font-weight: bold; 
+      text-decoration: none; 
+      color: #111; 
+      flex-shrink: 0; 
+    }
+
+    .hamburger { 
+      display: flex; 
+      flex-direction: column; 
+      justify-content: space-between; 
+      width: 24px; 
+      height: 18px; 
+      cursor: pointer; 
+      flex-shrink: 0; 
+    }
+
+    .hamburger span { 
+      display: block; 
+      height: 3px; 
+      width: 100%; 
+      background-color: #111; 
+      border-radius: 2px; 
+    }
+
+    .search-bar { 
+      flex: 1; 
+      min-width: 120px; 
+      padding: 6px 12px; 
+      border-radius: 6px; 
+      border: 1px solid #ccc; 
+      font-size: 14px; 
+      max-width: 200px; /* keep smaller like product page */
+    }
+
+    .liked-icon img, 
+    .cart img { 
+      width: 28px; 
+      height: 28px; 
+      margin-left: 10px; 
+      flex-shrink: 0; 
+    }
+
+    /* Cart Container */
+    .container { 
+      max-width: 100%; 
+      margin: 20px auto; 
+      padding: 15px; 
+      background: #fff; 
+      border-radius: 12px; 
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08); 
+    }
+
+    h1 { 
+      margin-bottom: 20px; 
+      font-size: 1.6rem; 
+      text-align: center; 
+    }
+
+    table { 
+      width: 100%; 
+      border-collapse: collapse; 
+      margin-bottom: 20px; 
+      font-size: 14px; 
+    }
+
+    th, td { 
+      padding: 10px; 
+      text-align: center; 
+      border-bottom: 1px solid #ddd; 
+    }
+
+    img { 
+      width: 70px; 
+      height: 70px; 
+      object-fit: cover; 
+      border-radius: 6px; 
+    }
+
+    .quantity-btn { 
+      padding: 6px 12px; 
+      margin: 0 4px; 
+      cursor: pointer; 
+      border: none; 
+      border-radius: 4px; 
+      background: #f1641e; 
+      color: #fff; 
+    }
+
+    .remove-btn { 
+      cursor: pointer; 
+      color: #f1641e; 
+      font-weight: bold; 
+    }
+
+    .total { 
+      text-align: right; 
+      font-size: 18px; 
+      margin-top: 10px; 
+      font-weight: bold; 
+    }
+
+    select, .checkout-btn { 
+      padding: 12px 16px; 
+      font-size: 16px; 
+      border-radius: 8px; 
+      margin-top: 10px; 
+      width: 100%; 
+    }
+
+    .checkout-btn { 
+      cursor: pointer; 
+      background: #f1641e; 
+      color: #fff; 
+      border: none; 
+      transition: 0.3s; 
+      font-size: 18px; 
+      font-weight: bold; 
+    }
+
+    .checkout-btn:hover { 
+      background: #d9550e; 
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .header-container { 
+        gap: 6px; 
+      }
+      .search-bar { 
+        min-width: 80px; 
+        max-width: 150px; 
+      }
+      table { 
+        font-size: 12px; 
+      }
+      th, td { 
+        padding: 8px; 
+      }
+    }
   </style>
 </head>
 <body>
 
 <!-- Header -->
 <header class="header">
-  <div class="container header-container">
+  <div class="header-container">
     <!-- Hamburger Icon -->
     <div class="hamburger">
       <span></span>
@@ -42,9 +195,9 @@
     <input type="text" class="search-bar" placeholder="Search products...">
 
     <!-- Heart / Liked Items -->
-  <a href="liked.html" class="liked-icon">
-    <img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items">
-  </a>
+    <a href="liked.html" class="liked-icon">
+      <img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items">
+    </a>
 
     <!-- Shopping Cart Icon -->
     <a href="cart.html" class="cart">
@@ -53,6 +206,7 @@
   </div>
 </header>
 
+<!-- Cart Content -->
 <div class="container">
   <h1>Your Cart</h1>
   <table id="cart-table">
@@ -72,7 +226,7 @@
   <div class="total" id="cart-total"></div>
 
   <!-- Checkout Section -->
-  <div style="margin-top:20px;">
+  <div>
     <label for="payment-method"><strong>Choose Payment Method:</strong></label><br>
     <select id="payment-method">
       <option value="">-- Select Payment --</option>
@@ -138,28 +292,6 @@
     if (!method) { alert("Please select a payment method."); return; }
 
     if (method === "paypal") {
-      // Redirect to PayPal (server endpoint needed)
       window.location.href = "/paypal-checkout?items=" + encodeURIComponent(JSON.stringify(cart));
-    } else if (method === "stripe-card") {
-      fetch("http://localhost:4000/create-checkout-session", {
-        method:"POST",
-        headers: { "Content-Type":"application/json" },
-        body: JSON.stringify({ items: cart, paymentType:"card" })
-      })
-      .then(res => res.json())
-      .then(data => window.location.href = data.url)
-      .catch(err => console.error(err));
-    } else if (method === "stripe-wallet") {
-      fetch("http://localhost:4000/create-checkout-session", {
-        method:"POST",
-        headers:{ "Content-Type":"application/json" },
-        body: JSON.stringify({ items: cart, paymentType:"wallet" })
-      })
-      .then(res => res.json())
-      .then(data => window.location.href = data.url)
-      .catch(err => console.error(err));
-    }
-  }
-</script>
-</body>
-</html>
+    } else if (method === "stripe-card" || method === "stripe-wallet") {
+      fetch(
