--- a/product.html
+++ b/product.html
@@ -300,7 +300,7 @@ async function checkoutProduct() {
   if(!method){ alert("Please select a payment method!"); return; }
 
   if(method==="paypal"){
-    window.location.href = `https://www.paypal.com/checkoutnow?amount=${(currentProduct.price/100).toFixed(2)}`;
+    window.location.href = `https://www.paypal.com/checkoutnow?amount=${currentProduct.price.toFixed(2)}`;
   } else {
     const response = await fetch("http://localhost:4000/create-checkout-session", {
       method: "POST",
