--- a/product.html
+++ b/product.html
@@ -2,224 +2,45 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Product Details</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Product - DjsDopeDesigns</title>
+<link rel="stylesheet" href="styles.css">
 <style>
-  /* 🌐 Global Styles */
-  html, body {
-    overflow-x: hidden; /* prevent horizontal scroll */
-    width: 100vw;
-  }
-
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    background: #f6f6f6;
-    color: #333;
-    padding-top: 60px; /* space for fixed header */
-  }
-
-  /* Header */
-  .header {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%;
-    z-index: 1000;
-    background: #fff;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  }
-
-  .header .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-    padding: 8px 16px;
-    box-sizing: border-box;
-  }
-
-  .logo { font-weight: bold; font-size: 20px; text-decoration: none; color: #111; flex-shrink:0; }
-  .hamburger { display: none; flex-direction: column; justify-content: space-between; height: 18px; cursor: pointer; }
-  .hamburger span { display: block; height: 2px; width: 25px; background: #111; border-radius: 2px; }
-
-  .search-bar {
-    flex: 1;
-    max-width: 60%;
-    min-width: 0;
-    padding: 8px 12px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    font-size: 14px;
-  }
-
-  .cart, .liked-icon { width: 32px; height: 32px; flex-shrink:0; }
-  .cart img, .liked-icon img { width: 100%; height: 100%; }
-
-  /* Product Section */
-  .product-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px auto;
-    max-width: 100%;
-    width: 100%;
-    padding: 0 10px;
-    box-sizing: border-box;
-  }
-
-  .product-image-wrapper {
-    width: 100%;
-    position: relative;
-  }
-  #product-image {
-    width: 100%;
-    border-radius: 10px;
-    max-width: 100%;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    margin-bottom: 15px;
-    display: block;
-  }
-  .heart.always {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 36px; height: 36px;
-    background: white;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    cursor: pointer;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-  }
-
-  /* Price & Title */
-  #product-price {
-    font-size: 36px; /* 50% bigger */
-    font-weight: bold;
-    color: #111;
-    width: 100%;
-    text-align: left;
-    margin-bottom: 10px;
-  }
-  #product-name {
-    font-size: 22px;
-    font-weight: normal;
-    margin-bottom: 20px;
-    text-align: left;
-    width: 100%;
-  }
-
-  /* Buttons */
-  .btn {
-    width: 100%;
-    padding: 16px;
-    margin-bottom: 12px;
-    font-size: 18px;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: 0.3s;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  }
-  .add-to-cart {
-    background: #f1641e;
-    color: #fff;
-  }
-  .add-to-cart:hover { background: #d9550e; }
-  .checkout-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    background: #ff8c42;
-    color: #fff;
-  }
-  .checkout-btn:hover { background: #e57a25; }
-  .checkout-btn img { width: 24px; height: 24px; }
-
-  /* Checkout Wrapper */
-  .checkout-wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    gap: 10px;
-    margin-bottom: 20px;
-  }
-  select#payment-method {
-    padding: 14px;
-    border-radius: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    appearance: none;
-  }
-
-  /* Description */
-  .details {
-    max-width: 100%;
-    margin: 20px auto 60px;
-    padding: 20px;
-    background: #fff;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-    box-sizing: border-box;
-  }
-  .details h2 { font-size: 22px; margin-bottom: 10px; }
-  .details p { font-size: 16px; line-height: 1.6; color: #555; }
-
-  @media (max-width: 480px) {
-    #product-price { font-size: 32px; }
-    #product-name { font-size: 20px; }
-    .btn { font-size: 16px; padding: 14px; border-radius: 25px; }
-    .hamburger { display: flex; }
-  }
-
-/* Desktop: keep content centered and not too wide */
-@media (min-width: 769px) {
-  .product-container,
-  .details {
-    max-width: 800px;   /* narrower on desktop */
-    margin: 20px auto;  /* center horizontally */
-  }
-
-  .search-bar {
-    max-width: 300px;   /* search bar doesn’t stretch across huge screens */
-  }
-}
+body { font-family: Arial,sans-serif; margin:0; background:#f6f6f6; padding-top:60px; overflow-x:hidden; color:#333; }
+.header { position: fixed; top:0; width:100%; background:#fff; box-shadow:0 2px 6px rgba(0,0,0,0.1); z-index:1000; }
+.header .container { display:flex; align-items:center; justify-content:space-between; padding:8px 16px; max-width:1200px; margin:0 auto; }
+.logo { font-weight:bold; font-size:20px; text-decoration:none; color:#111; }
+.search-bar { flex:1; min-width:120px; padding:6px 12px; border-radius:6px; border:1px solid #ccc; max-width:200px; }
+.cart img, .liked-icon img { width:28px; height:28px; }
+.product-container { max-width:800px; margin:20px auto; padding:10px; }
+#product-image { width:100%; border-radius:10px; margin-bottom:10px; }
+.btn { padding:12px 16px; border:none; border-radius:30px; cursor:pointer; margin-top:8px; background:#f1641e; color:#fff; font-size:18px; }
+.btn:hover { background:#d9550e; }
+.heart { cursor:pointer; font-size:20px; position:absolute; top:10px; right:10px; background:#fff; border-radius:50%; width:36px; height:36px; display:flex; justify-content:center; align-items:center; box-shadow:0 2px 6px rgba(0,0,0,0.15); }
+.details { background:#fff; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.08); padding:20px; margin:20px auto; max-width:800px; }
+.checkout-wrapper { display:flex; flex-direction:column; gap:10px; margin-top:15px; }
+select { padding:12px; border-radius:10px; font-size:16px; border:1px solid #ccc; }
 </style>
 </head>
 <body>
 
-<!-- Header -->
 <header class="header">
-  <div class="container">
-    <div class="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <a href="index.html" class="logo">DjsDopeDesigns</a>
-    <input type="text" class="search-bar" placeholder="Search products...">
-    <a href="liked.html" class="liked-icon">
-      <img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items">
-    </a>
-    <a href="cart.html" class="cart">
-      <img src="https://www.svgrepo.com/show/507858/shopping-cart.svg" alt="Cart">
-    </a>
-  </div>
+<div class="container">
+<a href="index.html" class="logo">DjsDopeDesigns</a>
+<input type="text" class="search-bar" placeholder="Search products...">
+<a href="liked.html" class="liked-icon"><img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items"></a>
+<a href="cart.html" class="cart"><img src="https://www.svgrepo.com/show/507858/shopping-cart.svg" alt="Cart"></a>
+</div>
 </header>
 
-<!-- Product -->
 <div class="product-container">
-  <div class="product-image-wrapper">
-    <img id="product-image" src="" alt="Product Image">
-    <div class="heart always" onclick="toggleLike(currentProduct.id, this)">♡</div>
+  <div style="position:relative;">
+    <img id="product-image" src="" alt="Product">
+    <div class="heart" onclick="toggleLike(currentProduct.id, this)">♡</div>
   </div>
-  <p id="product-price"></p>
   <h1 id="product-name"></h1>
-
-  <button class="btn add-to-cart" onclick="addToCart()">Add to Cart</button>
+  <p id="product-price"></p>
+  <button class="btn" onclick="addToCart()">Add to Cart</button>
 
   <div class="checkout-wrapper">
     <select id="payment-method">
@@ -228,87 +49,63 @@
       <option value="paypal">PayPal</option>
       <option value="stripe-wallet">Google Pay / Apple Pay</option>
     </select>
-    <button class="btn checkout-btn" onclick="checkoutProduct()">
-      <img id="checkout-icon" src="https://cdn-icons-png.flaticon.com/512/888/888879.png" alt="Pay Icon"> Buy Now
-    </button>
+    <button class="btn" onclick="checkoutProduct()">Buy Now</button>
   </div>
 </div>
 
-<!-- Description -->
 <div class="details">
-  <h2>Product Description</h2>
-  <p id="product-description"></p>
+<h2>Product Description</h2>
+<p id="product-description"></p>
 </div>
 
 <script>
-const urlParams = new URLSearchParams(window.location.search);
-const productId = urlParams.get("id");
 let currentProduct = null;
+const params = new URLSearchParams(window.location.search);
+const productId = params.get("id");
 
-// Fetch product JSON
 fetch('products.json')
-.then(res => res.json())
-.then(products => {
-  const product = products.find(p => p.id.toString() === productId);
-  if(product){
-    currentProduct = product;
-    document.getElementById("product-image").src = product.image || "https://via.placeholder.com/600x400?text=No+Image";
-    document.getElementById("product-price").textContent = "$" + (product.price/100).toFixed(2);
-    document.getElementById("product-name").textContent = product.name;
-    document.getElementById("product-description").textContent = product.description;
+.then(res=>res.json())
+.then(products=>{
+  const product = products.find(p=>p.id.toString()===productId.toString());
+  if(!product) return;
+  currentProduct = product;
+  document.getElementById("product-image").src = product.image || "https://via.placeholder.com/600x400";
+  document.getElementById("product-name").textContent = product.name;
+  document.getElementById("product-price").textContent = "$"+(product.price/100).toFixed(2);
+  document.getElementById("product-description").textContent = product.description;
 
-    const heartEl = document.querySelector(".heart");
-    const liked = JSON.parse(localStorage.getItem("likedItems")) || [];
-    if(liked.includes(product.id.toString())) heartEl.textContent = "♥";
-  }
+  const heartEl = document.querySelector(".heart");
+  let liked = JSON.parse(localStorage.getItem("likedItems")) || [];
+  if(liked.includes(product.id.toString())) heartEl.textContent="♥";
 });
 
-// Cart
-function addToCart() {
+function addToCart(){
   if(!currentProduct) return;
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
-  const existing = cart.find(item => item.id.toString()===currentProduct.id.toString());
+  const existing = cart.find(item=>item.id===currentProduct.id.toString());
   if(existing) existing.quantity++;
-  else cart.push({ id: currentProduct.id.toString(), name: currentProduct.name, price: currentProduct.price / 100, image: currentProduct.image, quantity: 1 });
+  else cart.push({ id: currentProduct.id.toString(), name: currentProduct.name, price: currentProduct.price/100, image: currentProduct.image, quantity:1 });
   localStorage.setItem("cart", JSON.stringify(cart));
   alert(currentProduct.name + " added to cart!");
 }
 
-// Like button
-function toggleLike(productId, el) {
+function toggleLike(productId, el){
   productId = productId.toString();
   let liked = JSON.parse(localStorage.getItem("likedItems")) || [];
-  if(liked.includes(productId)) { liked = liked.filter(id=>id!==productId); el.textContent="♡"; }
+  if(liked.includes(productId)){ liked = liked.filter(id=>id!==productId); el.textContent="♡"; }
   else { liked.push(productId); el.textContent="♥"; }
   localStorage.setItem("likedItems", JSON.stringify(liked));
 }
 
-// Checkout
-const paymentSelect = document.getElementById("payment-method");
-const checkoutIcon = document.getElementById("checkout-icon");
-paymentSelect.addEventListener("change", () => {
-  const val = paymentSelect.value;
-  if(val==="paypal") checkoutIcon.src="https://cdn-icons-png.flaticon.com/512/888/888841.png";
-  else if(val==="stripe-card") checkoutIcon.src="https://cdn-icons-png.flaticon.com/512/888/888879.png";
-  else if(val==="stripe-wallet") checkoutIcon.src="https://cdn-icons-png.flaticon.com/512/888/888863.png";
-  else checkoutIcon.src="https://cdn-icons-png.flaticon.com/512/888/888879.png";
-});
-
-async function checkoutProduct() {
+function checkoutProduct(){
   if(!currentProduct) return;
-  const method = paymentSelect.value;
-  if(!method){ alert("Please select a payment method!"); return; }
+  const method = document.getElementById("payment-method").value;
+  if(!method){ alert("Select a payment method!"); return; }
 
   if(method==="paypal"){
-    window.location.href = `https://www.paypal.com/checkoutnow?amount=${currentProduct.price.toFixed(2)}`;
+    window.location.href=`https://www.paypal.com/checkoutnow?amount=${(currentProduct.price/100).toFixed(2)}`;
   } else {
-    const response = await fetch("http://localhost:4000/create-checkout-session", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ items:[{ id: currentProduct.id, name: currentProduct.name, price: currentProduct.price, quantity:1 }], paymentType: method==="stripe-card"?"card":"wallet" })
-    });
-    const data = await response.json();
-    window.location = data.url;
+    alert("Stripe checkout not implemented in demo. You can integrate Stripe API here.");
   }
 }
 </script>
