--- a/cart.html
+++ b/cart.html
@@ -1,297 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cart - DjsDopeDesigns</title>
-  <link rel="stylesheet" href="styles.css">
-  <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      margin: 0; 
-      background: #f6f6f6; 
-      color: #333; 
-      overflow-x: hidden; /* Prevent horizontal scroll */
-    }
-
-    /* 🌐 Header */
-    .header { 
-      position: sticky; 
-      top: 0; 
-      z-index: 1000; 
-      background: #fff; 
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1); 
-    }
-
-    .header-container { 
-      display: flex; 
-      align-items: center; 
-      justify-content: space-between; 
-      padding: 8px 16px; 
-      max-width: 1200px; 
-      margin: 0 auto; 
-      gap: 10px; 
-    }
-
-    .logo { 
-      font-size: 20px; 
-      font-weight: bold; 
-      text-decoration: none; 
-      color: #111; 
-      flex-shrink: 0; 
-    }
-
-    .hamburger { 
-      display: flex; 
-      flex-direction: column; 
-      justify-content: space-between; 
-      width: 24px; 
-      height: 18px; 
-      cursor: pointer; 
-      flex-shrink: 0; 
-    }
-
-    .hamburger span { 
-      display: block; 
-      height: 3px; 
-      width: 100%; 
-      background-color: #111; 
-      border-radius: 2px; 
-    }
-
-    .search-bar { 
-      flex: 1; 
-      min-width: 120px; 
-      padding: 6px 12px; 
-      border-radius: 6px; 
-      border: 1px solid #ccc; 
-      font-size: 14px; 
-      max-width: 200px; /* keep smaller like product page */
-    }
-
-    .liked-icon img, 
-    .cart img { 
-      width: 28px; 
-      height: 28px; 
-      margin-left: 10px; 
-      flex-shrink: 0; 
-    }
-
-    /* Cart Container */
-    .container { 
-      max-width: 100%; 
-      margin: 20px auto; 
-      padding: 15px; 
-      background: #fff; 
-      border-radius: 12px; 
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08); 
-    }
-
-    h1 { 
-      margin-bottom: 20px; 
-      font-size: 1.6rem; 
-      text-align: center; 
-    }
-
-    table { 
-      width: 100%; 
-      border-collapse: collapse; 
-      margin-bottom: 20px; 
-      font-size: 14px; 
-    }
-
-    th, td { 
-      padding: 10px; 
-      text-align: center; 
-      border-bottom: 1px solid #ddd; 
-    }
-
-    img { 
-      width: 70px; 
-      height: 70px; 
-      object-fit: cover; 
-      border-radius: 6px; 
-    }
-
-    .quantity-btn { 
-      padding: 6px 12px; 
-      margin: 0 4px; 
-      cursor: pointer; 
-      border: none; 
-      border-radius: 4px; 
-      background: #f1641e; 
-      color: #fff; 
-    }
-
-    .remove-btn { 
-      cursor: pointer; 
-      color: #f1641e; 
-      font-weight: bold; 
-    }
-
-    .total { 
-      text-align: right; 
-      font-size: 18px; 
-      margin-top: 10px; 
-      font-weight: bold; 
-    }
-
-    select, .checkout-btn { 
-      padding: 12px 16px; 
-      font-size: 16px; 
-      border-radius: 8px; 
-      margin-top: 10px; 
-      width: 100%; 
-    }
-
-    .checkout-btn { 
-      cursor: pointer; 
-      background: #f1641e; 
-      color: #fff; 
-      border: none; 
-      transition: 0.3s; 
-      font-size: 18px; 
-      font-weight: bold; 
-    }
-
-    .checkout-btn:hover { 
-      background: #d9550e; 
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      .header-container { 
-        gap: 6px; 
-      }
-      .search-bar { 
-        min-width: 80px; 
-        max-width: 150px; 
-      }
-      table { 
-        font-size: 12px; 
-      }
-      th, td { 
-        padding: 8px; 
-      }
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Cart</title>
+<style>
+body{font-family:Arial,sans-serif;margin:0;background:#f6f6f6;}
+.header{padding:10px;background:#fff;display:flex;align-items:center;gap:10px;box-shadow:0 2px 6px rgba(0,0,0,0.1);}
+table{width:100%;border-collapse:collapse;margin-top:10px;}
+th,td{padding:8px;border-bottom:1px solid #ddd;text-align:center;}
+.quantity-btn{padding:4px 8px;background:#f1641e;color:#fff;border:none;border-radius:4px;cursor:pointer;}
+.remove-btn{cursor:pointer;color:#f1641e;font-weight:bold;}
+.total{text-align:right;font-weight:bold;margin-top:10px;}
+</style>
 </head>
 <body>
-
-<!-- Header -->
 <header class="header">
-  <div class="header-container">
-    <!-- Hamburger Icon -->
-    <div class="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-
-    <!-- Logo -->
-    <a href="index.html" class="logo">DjsDopeDesigns</a>
-
-    <!-- Search Bar -->
-    <input type="text" class="search-bar" placeholder="Search products...">
-
-    <!-- Heart / Liked Items -->
-    <a href="liked.html" class="liked-icon">
-      <img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items">
-    </a>
-
-    <!-- Shopping Cart Icon -->
-    <a href="cart.html" class="cart">
-      <img src="https://www.svgrepo.com/show/507858/shopping-cart.svg" alt="Cart">
-    </a>
-  </div>
+  <a href="index.html">DjsDopeDesigns</a>
+  <a href="cart.html" class="cart">🛒 <span id="cart-count">0</span></a>
 </header>
 
-<!-- Cart Content -->
-<div class="container">
+<div style="padding:10px;max-width:800px;margin:auto;">
   <h1>Your Cart</h1>
   <table id="cart-table">
     <thead>
-      <tr>
-        <th>Product</th>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Quantity</th>
-        <th>Subtotal</th>
-        <th>Remove</th>
-      </tr>
+      <tr><th>Product</th><th>Name</th><th>Price</th><th>Quantity</th><th>Subtotal</th><th>Remove</th></tr>
     </thead>
     <tbody></tbody>
   </table>
-
   <div class="total" id="cart-total"></div>
-
-  <!-- Checkout Section -->
-  <div>
-    <label for="payment-method"><strong>Choose Payment Method:</strong></label><br>
-    <select id="payment-method">
-      <option value="">-- Select Payment --</option>
-      <option value="stripe-card">Credit / Debit Card (Visa, MasterCard, AmEx, Discover)</option>
-      <option value="paypal">PayPal</option>
-      <option value="stripe-wallet">Google Pay / Apple Pay</option>
-    </select>
-    <button class="checkout-btn" onclick="processCheckout()">Checkout</button>
-  </div>
 </div>
 
 <script>
-  // Load cart
-  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+let cart = JSON.parse(localStorage.getItem("cart")) || [];
 
-  function renderCart() {
-  const tbody = document.querySelector("#cart-table tbody");
-  tbody.innerHTML = "";
-  let total = 0;
-
-  cart.forEach((item, idx) => {
-    const subtotal = item.price * item.quantity;
-    total += subtotal;
-    const tr = document.createElement("tr");
-    tr.innerHTML = `
-      <td><img src="${item.image || 'https://via.placeholder.com/80'}" alt="${item.name}"></td>
-      <td>${item.name}</td>
-      <td>$${item.price.toFixed(2)}</td>
-      <td>
-        <button class="quantity-btn" onclick="updateQty(${idx}, -1)">-</button>
-        ${item.quantity}
-        <button class="quantity-btn" onclick="updateQty(${idx}, 1)">+</button>
-      </td>
-      <td>$${subtotal.toFixed(2)}</td>
-      <td><span class="remove-btn" onclick="removeItem(${idx})">X</span></td>
-    `;
+function renderCart(){
+  const tbody=document.querySelector("#cart-table tbody");
+  tbody.innerHTML="";
+  if(cart.length===0){tbody.innerHTML='<tr><td colspan="6">Your cart is empty.</td></tr>'; document.getElementById("cart-total").textContent="Total: $0.00"; return;}
+  let total=0;
+  cart.forEach((item,idx)=>{
+    const subtotal = item.price*item.quantity; total+=subtotal;
+    const tr=document.createElement("tr");
+    tr.innerHTML=`<td><img src="${item.image}" style="width:50px;height:50px;"></td>
+                  <td>${item.name}</td>
+                  <td>$${item.price.toFixed(2)}</td>
+                  <td>
+                    <button class="quantity-btn" onclick="updateQty(${idx},-1)">-</button>${item.quantity}
+                    <button class="quantity-btn" onclick="updateQty(${idx},1)">+</button>
+                  </td>
+                  <td>$${subtotal.toFixed(2)}</td>
+                  <td><span class="remove-btn" onclick="removeItem(${idx})">X</span></td>`;
     tbody.appendChild(tr);
   });
-
-  document.getElementById("cart-total").textContent = "Total: $" + total.toFixed(2);
+  document.getElementById("cart-total").textContent="Total: $"+total.toFixed(2);
+  updateCartCount();
 }
 
-  function updateQty(idx, change) {
-    cart[idx].quantity += change;
-    if (cart[idx].quantity <= 0) removeItem(idx);
-    localStorage.setItem("cart", JSON.stringify(cart));
-    renderCart();
-  }
+function updateQty(idx,change){ cart[idx].quantity+=change; if(cart[idx].quantity<=0) removeItem(idx); localStorage.setItem("cart",JSON.stringify(cart)); renderCart(); }
+function removeItem(idx){ cart.splice(idx,1); localStorage.setItem("cart",JSON.stringify(cart)); renderCart(); }
 
-  function removeItem(idx) {
-    cart.splice(idx,1);
-    localStorage.setItem("cart", JSON.stringify(cart));
-    renderCart();
-  }
+function updateCartCount(){ const total=cart.reduce((sum,i)=>sum+i.quantity,0); const c=document.getElementById("cart-count"); if(c)c.textContent=total; }
 
-  renderCart();
-
-  // Checkout
-  function processCheckout() {
-    if (cart.length === 0) { alert("Your cart is empty!"); return; }
-
-    const method = document.getElementById("payment-method").value;
-    if (!method) { alert("Please select a payment method."); return; }
-
-    if (method === "paypal") {
-      window.location.href = "/paypal-checkout?items=" + encodeURIComponent(JSON.stringify(cart));
-    } else if (method === "stripe-card" || method === "stripe-wallet") {
-      fetch(
+renderCart();
+</script>
+</body>
+</html>
